fix view on iphone's safari

--- a/assets/css/untitled.css
+++ b/assets/css/untitled.css
@@ -4,4 +4,6 @@ img, svg {
 .call-to-action.text-white.text-center {
 }
 
-.navbar-expand>.container { flex-wrap: wrap!important}
+.navbar-expand>.container { 
+    flex-wrap: wrap!important
+}
